new location for alt-ergo.lang
git-svn-id: svn://scm.gforge.inria.fr/svn/alt-ergo/trunk@2 b8d9039a-ea7d-4afb-bb93-26d10a78e78a

--- a/Makefile.in
+++ b/Makefile.in
@@ -192,8 +192,7 @@ install-prelude: smt_prelude.mlw
 
 install-gui: install-indep
 	cp -f altgr-ergo.opt $(BINDIR)/altgr-ergo$(EXE)
-	#cp -f alt-ergo.lang /usr/share/gtksourceview-1.0/language-specs/
-	cp -f alt-ergo2.lang /usr/share/gtksourceview-2.0/language-specs/alt-ergo.lang
+	cp -f util/gtk-lang/alt-ergo.lang /usr/share/gtksourceview-2.0/language-specs/alt-ergo.lang
 
 
 # documentation
