branchement des explication dans le backtracking de finite (fonction aux de Cc + correction du bug des disegalites dans upply_uf_rs
git-svn-id: svn://scm.gforge.inria.fr/svnroot/alt-ergo/trunk@58 b8d9039a-ea7d-4afb-bb93-26d10a78e78a

--- a/Makefile.in
+++ b/Makefile.in
@@ -141,7 +141,7 @@ testbyte:$(BYTE)
 
 testopt:$(OPT)
 	make -C util/
-	sh tests/test.sh " ./$(OPT) -glouton -triggers-var -pairs -arrays"
+	sh tests/test.sh " ./$(OPT) -glouton -triggers-var -pairs -arrays -proof -debug-proof"
 
 challenge:$(OPT)
 	make -C util/
