R.solve in x_solve with correct explanations + Makefile testproof
git-svn-id: svn://scm.gforge.inria.fr/svnroot/alt-ergo/trunk@62 b8d9039a-ea7d-4afb-bb93-26d10a78e78a

--- a/Makefile.in
+++ b/Makefile.in
@@ -141,6 +141,10 @@ testbyte:$(BYTE)
 
 testopt:$(OPT)
 	make -C util/
+	sh tests/test.sh " ./$(OPT) -glouton -triggers-var -pairs -arrays"
+
+testproof:$(OPT)
+	make -C util/
 	sh tests/test.sh " ./$(OPT) -glouton -triggers-var -pairs -arrays -proof -debug-proof"
 
 challenge:$(OPT)
