- Colors in testopt - add these lines in your .emacs to take advantage of colors in compilation mode: ;; colors in compilation buffer (require 'ansi-color) (defun colorize-compilation-buffer ()   (toggle-read-only)   (ansi-color-apply-on-region (point-min) (point-max))   (toggle-read-only)) (add-hook 'compilation-filter-hook 'colorize-compilation-buffer)
git-svn-id: svn://scm.gforge.inria.fr/svnroot/alt-ergo/trunk@74 b8d9039a-ea7d-4afb-bb93-26d10a78e78a

--- a/Makefile.in
+++ b/Makefile.in
@@ -137,23 +137,23 @@ test: $(OPT)
 	./$(OPT) test.mlw
 
 testbyte:$(BYTE)
-	sh tests/test.sh $(BYTE) -glouton
+	tests/test.sh $(BYTE) -glouton
 
 testopt:$(OPT)
 	make -C util/
-	sh tests/test.sh " ./$(OPT) -glouton -triggers-var -pairs -arrays"
+	tests/test.sh " ./$(OPT) -glouton -triggers-var -pairs -arrays"
 
 testproof:$(OPT)
 	make -C util/
-	sh tests/test.sh " ./$(OPT) -glouton -triggers-var -pairs -arrays -proof -debug-proof"
+	tests/test.sh " ./$(OPT) -glouton -triggers-var -pairs -arrays -proof -debug-proof"
 
 challenge:$(OPT)
 	make -C util/
-	sh tests/challenge.sh " ./$(OPT) "
+	tests/challenge.sh " ./$(OPT) "
 
 
 testoptsel:$(OPT)
-	sh tests/test.sh "./$(OPT) -select 2 -glouton -triggers-var "
+	tests/test.sh "./$(OPT) -select 2 -glouton -triggers-var "
 
 VERSION=0.92.3
 
