git-svn-id: svn://scm.gforge.inria.fr/svn/alt-ergo/trunk@87 b8d9039a-ea7d-4afb-bb93-26d10a78e78a

--- a/Makefile.in
+++ b/Makefile.in
@@ -279,12 +279,12 @@ source:
 
 BINARY = $(EXPORTDIR)-$$OSTYPE
 BINARYTAR=$(BINARY).tar
-
+ARCH = $(shell uname -m)
 BINARYFILES = README INSTALL COPYING CeCILL-C doc/$(NAME).1
 
 binary: $(OPT)
 	strip $(OPT)
-	cp $(OPT) $(HTTP)/alt-ergo-$(VERSION)
+	cp $(OPT) $(HTTP)/alt-ergo-$(VERSION)-$(ARCH)
 
 # literate programming
 ######################
