clear hashtable in formula
git-svn-id: svn://scm.gforge.inria.fr/svn/alt-ergo/trunk@93 b8d9039a-ea7d-4afb-bb93-26d10a78e78a

--- a/Makefile.in
+++ b/Makefile.in
@@ -141,7 +141,7 @@ testbyte:$(BYTE)
 
 testopt:$(OPT)
 	make -C util/
-	tests/test.sh " ./$(OPT) -glouton -triggers-var -pairs -arrays"
+	tests/test.sh " ./$(OPT) -pairs "
 
 testproof:$(OPT)
 	make -C util/
