--- a/util/Makefile
+++ b/util/Makefile
@@ -1,3 +1,4 @@
+all: split test
 
 split: split.ml
 	ocamlopt split.ml -o split
@@ -5,5 +6,11 @@ split: split.ml
 split.ml: split.mll
 	ocamllex split.mll
 
+test: test.ml
+	ocamlopt test.ml -o test
+  
+test.ml: test.mll
+	ocamllex test.mll
+
 clean: 
-	rm -f split.ml split.cm* split.o split 	
+	rm -f split.ml split.cm* split.o split test.ml test.cm* test.o test
