--- a/Makefile.in
+++ b/Makefile.in
@@ -91,7 +91,8 @@ CMO = version.cmo exception.cmo \
       smtlib2_parse.cmo smtlib2_lex.cmo smtlib2_to_why.cmo \
       polynome.cmo ac.cmo \
       uf.cmo use.cmo intervals.cmo fm.cmo arith.cmo \
-      pairs.cmo bitv.cmo arrays.cmo sum.cmo combine.cmo cc.cmo \
+      pairs.cmo bitv.cmo reachability.cmo arrays.cmo sum.cmo \
+      combine.cmo cc.cmo \
       heap.cmo existantial.cmo pruning.cmo \
       triggers.cmo cnf.cmo why_typing.cmo matching.cmo \
       sat.cmo frontend.cmo
