--- a/Makefile.in
+++ b/Makefile.in
@@ -91,7 +91,7 @@ CMO = version.cmo exception.cmo \
       smtlib2_parse.cmo smtlib2_lex.cmo smtlib2_to_why.cmo \
       polynome.cmo ac.cmo \
       uf.cmo use.cmo intervals.cmo fm.cmo arith.cmo \
-      pairs.cmo bitv.cmo reachability.cmo arrays.cmo sum.cmo \
+      records.cmo bitv.cmo reachability.cmo arrays.cmo sum.cmo \
       combine.cmo cc.cmo \
       heap.cmo existantial.cmo pruning.cmo \
       triggers.cmo cnf.cmo why_typing.cmo matching.cmo \
@@ -142,11 +142,11 @@ testbyte:$(BYTE)
 
 testopt:$(OPT)
 	make -C util/
-	tests/test.sh " ./$(OPT) -glouton -triggers-var -pairs -arrays "
+	tests/test.sh " ./$(OPT) -glouton -triggers-var -arrays "
 
 testproof:$(OPT)
 	make -C util/
-	tests/test.sh " ./$(OPT) -glouton -triggers-var -pairs -arrays -proof -debug-proof"
+	tests/test.sh " ./$(OPT) -glouton -triggers-var -arrays -proof -debug-proof"
 
 challenge:$(OPT)
 	make -C util/
@@ -251,7 +251,7 @@ FILES = version.sh.in version.ml exception.mli exception.ml \
 	intervals.mli intervals.ml \
 	fm.mli fm.ml \
 	arith.mli arith.ml \
-	pairs.mli pairs.ml \
+	records.mli records.ml \
 	arrays.ml arrays.mli \
 	sum.ml sum.mli \
 	bitv.mli bitv.ml \
