parse TR in output (qualif)
git-svn-id: svn://scm.gforge.inria.fr/svn/alt-ergo/trunk@201 b8d9039a-ea7d-4afb-bb93-26d10a78e78a

--- a/util/Makefile
+++ b/util/Makefile
@@ -7,7 +7,7 @@ split.ml: split.mll
 	ocamllex split.mll
 
 test: test.ml
-	ocamlopt test.ml -o test
+	ocamlopt unix.cmxa test.ml -o test
   
 test.ml: test.mll
 	ocamllex test.mll
