git-svn-id: svn://scm.gforge.inria.fr/svn/alt-ergo/trunk@261 b8d9039a-ea7d-4afb-bb93-26d10a78e78a

--- a/Makefile.in
+++ b/Makefile.in
@@ -236,7 +236,7 @@ ERGOWEB = $$HOME/WWW/ergo/
 FILES = exception.mli exception.ml \
 	print_color.mli print_color.ml \
 	preoptions.ml preoptions.mli \
-	parseoptions.ml parseoptions.mli options.mli options.ml \
+	parseoptions.ml options.mli options.ml \
 	loc.ml sig.mli \
 	hashcons.mli hashcons.ml \
 	hstring.mli hstring.ml	\
