patch configure johannes
git-svn-id: svn://scm.gforge.inria.fr/svnroot/alt-ergo/trunk@281 b8d9039a-ea7d-4afb-bb93-26d10a78e78a

--- a/configure.in
+++ b/configure.in
@@ -176,7 +176,7 @@ AC_CHECK_PROG(OCAMLWEB,ocamlweb,ocamlweb,true)
 
 # platform
 AC_MSG_CHECKING(platform)
-if echo "let _ = Sys.os_type" | ocaml | grep -q Win32; then
+if echo "let _ = Sys.os_type;;" | ocaml | grep -q Win32; then
     AC_MSG_RESULT(Win32)
     OCAMLWIN32=yes
     EXE=.exe
