robust (changes resistant) replay + menu (wip)
git-svn-id: svn://scm.gforge.inria.fr/svnroot/alt-ergo/trunk@405 b8d9039a-ea7d-4afb-bb93-26d10a78e78a

--- a/Makefile.in
+++ b/Makefile.in
@@ -62,6 +62,7 @@ BIBBYTE = nums.cma graph.cma unix.cma
 
 BIBOPT = $(BIBBYTE:.cma=.cmxa)
 
+BIBGUIBYTE = threads.cma lablgtk.cma lablgtksourceview2.cma gtkThread.cmo
 BIBGUIOPT = threads.cmxa lablgtk.cmxa lablgtksourceview2.cmxa gtkThread.cmx 
 
 # main target
@@ -145,6 +146,10 @@ $(NAME).opt: $(PRECMX) $(OPTIONSCMX) $(MAINCMX)
 gui: $(PRECMX) $(OPTIONSCMX) $(GUICMX)
 	$(if $(QUIET),@echo 'Linking $@' &&) 
 	$(OCAMLOPT) $(OFLAGS) -o altgr-ergo.opt $(BIBOPT) $(BIBGUIOPT) $^
+
+guibyte: $(PRECMO) $(OPTIONSCMO) $(GUICMO)
+	$(if $(QUIET),@echo 'Linking $@' &&) 
+	$(OCAMLC) $(BFLAGS) -o altgr-ergo.byte $(BIBBYTE) $(BIBGUIBYTE) $^
 
 test: $(OPT)
 	./$(OPT) test.mlw
