--- a/configure.in
+++ b/configure.in
@@ -169,7 +169,12 @@ AC_CHECK_FILE($OCAMLLIB/lablgtk2/lablgtksourceview2.cmxa,LABLGTK2=yes,LABLGTK2=n
 if test "$LABLGTK2" = no ; then
       AC_MSG_RESULT(Will not be able to compile GUI. Please install the *liblablgtksourceview2-ocaml-dev* Debian package - or use the GODI caml package system *http://godi.ocaml-programming.de/* - or compile from sources *http://wwwfun.kurims.kyoto-u.ac.jp/soft/lsl/lablgtk.html*)
 else
-   LABLGTK2LIB="-I +lablgtk2 -I +threads"
+	AC_CHECK_FILE($OCAMLLIB/lablgtk-extras/okey.cmx,LABLGTK2=yes,LABLGTK2=no)
+	if test "$LABLGTK2" = no ; then
+      	   AC_MSG_RESULT(Will not be able to compile GUI. Please install the *liblablgtk-extras-ocaml-dev* Debian package - or use the GODI caml package system *http://godi.ocaml-programming.de/*)
+	else
+   	   LABLGTK2LIB="-I +lablgtk2 -I +lablgtk-extras -I +threads"
+	fi
 fi
 
 AC_CHECK_PROG(OCAMLWEB,ocamlweb,ocamlweb,true)
