different case split + bugfix interval + init_leaf on v in cc + remove dependancy okey + better model
git-svn-id: svn://scm.gforge.inria.fr/svnroot/alt-ergo/trunk@416 b8d9039a-ea7d-4afb-bb93-26d10a78e78a

--- a/Makefile.in
+++ b/Makefile.in
@@ -62,8 +62,8 @@ BIBBYTE = nums.cma graph.cma unix.cma
 
 BIBOPT = $(BIBBYTE:.cma=.cmxa)
 
-BIBGUIBYTE = threads.cma lablgtk.cma lablgtksourceview2.cma gtkThread.cmo okey.cmo
-BIBGUIOPT = threads.cmxa lablgtk.cmxa lablgtksourceview2.cmxa gtkThread.cmx okey.cmx
+BIBGUIBYTE = threads.cma lablgtk.cma lablgtksourceview2.cma gtkThread.cmo
+BIBGUIOPT = threads.cmxa lablgtk.cmxa lablgtksourceview2.cmxa gtkThread.cmx
 
 # main target
 #############
