--- a/configure.in
+++ b/configure.in
@@ -64,7 +64,7 @@ fi
 # we extract Ocaml version number and library path
 OCAMLVERSION=`$OCAMLC -v | sed -n -e 's|.*version *\(.*\)$|\1|p' `
 echo "ocaml version is $OCAMLVERSION"
-OCAMLLIB=`$OCAMLC -v | tail -1 | cut -f 4 -d " "`
+OCAMLLIB=`$OCAMLC -v | tail -1 | cut -f 4 -d " " | tr -d '\\r'` 
 echo "ocaml library path is $OCAMLLIB"
 SMTPRELUDE="/usr/local/lib/ergo/smt_prelude.mlw"
 
