bugfix completude arrays
git-svn-id: svn://scm.gforge.inria.fr/svnroot/alt-ergo/trunk@572 b8d9039a-ea7d-4afb-bb93-26d10a78e78a

--- a/Makefile.in
+++ b/Makefile.in
@@ -358,7 +358,7 @@ configure: configure.in
 #######
 
 clean:: 
-	@rm -f *.cm[iox] *.o *~ *.annot *.owz *mlocamlwizard_tmp_file*
+	@rm -f *.cm[ioxt] *.cmti *.o *~ *.annot *.owz *mlocamlwizard_tmp_file*
 	@rm -f $(GENERATED) *.output
 	@rm -f $(NAME).byte $(NAME).opt
 	@rm -f unittest/*.cm[iox] unittest/*.o unittest/*.annot
