--- a/configure.in
+++ b/configure.in
@@ -56,7 +56,7 @@ AC_INIT(cc.mli)
 # Check for Ocaml compilers
 
 # we first look for ocamlc in the path; if not present, we fail
-AC_CHECK_PROG(OCAMLC,ocamlc,ocamlc,no)
+AC_CHECK_PROGS(OCAMLC,ocp-ocamlc ocamlc,no)
 if test "$OCAMLC" = no ; then
 	AC_MSG_ERROR(Cannot find ocamlc.)
 fi
@@ -90,7 +90,7 @@ fi
 # then we look for ocamlopt; if not present, we issue a warning
 # if the version is not the same, we also discard it
 # we set OCAMLBEST to "opt" or "byte", whether ocamlopt is available or not
-AC_CHECK_PROG(OCAMLOPT,ocamlopt,ocamlopt,no)
+AC_CHECK_PROGS(OCAMLOPT,ocp-ocamlopt ocamlopt,no)
 OCAMLBEST=byte
 if test "$OCAMLOPT" = no ; then
 	AC_MSG_WARN(Cannot find ocamlopt; bytecode compilation only.)
@@ -107,7 +107,7 @@ else
 fi
 
 # checking for ocamlc.opt
-AC_CHECK_PROG(OCAMLCDOTOPT,ocamlc.opt,ocamlc.opt,no)
+AC_CHECK_PROGS(OCAMLCDOTOPT,ocp-ocamlc.opt ocamlc.opt,no)
 if test "$OCAMLCDOTOPT" != no ; then
 	AC_MSG_CHECKING(ocamlc.opt version)
 	TMPVERSION=`$OCAMLCDOTOPT -v | sed -n -e 's|.*version *\(.*\)$|\1|p' `
@@ -121,7 +121,7 @@ fi
 
 # checking for ocamlopt.opt
 if test "$OCAMLOPT" != no ; then
-    AC_CHECK_PROG(OCAMLOPTDOTOPT,ocamlopt.opt,ocamlopt.opt,no)
+    AC_CHECK_PROGS(OCAMLOPTDOTOPT,ocp-ocamlopt.opt ocamlopt.opt,no)
     if test "$OCAMLOPTDOTOPT" != no ; then
 	AC_MSG_CHECKING(ocamlc.opt version)
 	TMPVER=`$OCAMLOPTDOTOPT -v | sed -n -e 's|.*version *\(.*\)$|\1|p' `
