--- a/Makefile.in
+++ b/Makefile.in
@@ -51,6 +51,7 @@ OCAMLBEST = @OCAMLBEST@
 OCAMLVERSION = @OCAMLVERSION@
 OCAMLWIN32 = @OCAMLWIN32@
 EXE = @EXE@
+ENABLEGUI = @ENABLEGUI@
 
 INCLUDES = @OCAMLGRAPHLIB@ @LABLGTK2LIB@
 
@@ -72,7 +73,7 @@ LIBNAME = altErgo
 BYTE=$(NAME).byte
 OPT=$(NAME).opt
 
-all: pack xpack $(OCAMLBEST) pack xpack all
+all: pack xpack $(OCAMLBEST) pack xpack gui
 
 
 # bytecode and native-code compilation
@@ -117,9 +118,17 @@ GENERATED = version.ml \
 	smt_parser.ml smt_parser.mli smt_lex.ml \
 	smtlib2_parse.ml smtlib2_parse.mli smtlib2_lex.ml
 
-GUICMO = $(CMO) $(CMOFRONT) gui_session.cmo why_annoted.cmo \
-	 why_connected.cmo gui_replay.cmo gui.cmo
+
+ifeq ($(ENABLEGUI),yes)
+	GUICMO = $(CMO) $(CMOFRONT) gui_session.cmo why_annoted.cmo \
+	   why_connected.cmo gui_replay.cmo gui.cmo
+else 
+	GUICMO = 
+endif
+
+
 GUICMX = $(GUICMO:.cmo=.cmx)
+
 
 byte: $(NAME).byte
 opt: $(NAME).opt
@@ -145,8 +154,12 @@ $(NAME).opt: $(PRECMX) $(OPTIONSCMX) $(MAINCMX)
 	$(OCAMLOPT) $(OFLAGS) -o $@ $(BIBOPT) $^
 
 gui: $(PRECMX) $(OPTIONSCMX) $(GUICMX)
+ifeq ($(ENABLEGUI),yes)
 	$(if $(QUIET),@echo 'Linking $@' &&) 
 	$(OCAMLOPT) $(OFLAGS) -o altgr-ergo.opt $(BIBOPT) $(BIBGUIOPT) $^
+else
+	@echo "gui compilation skipped (lablgtksourceview not detected)"
+endif
 
 
 guibyte: $(PRECMO) $(OPTIONSCMO) $(GUICMO)
@@ -197,10 +210,6 @@ headers:
 
 install-indep: install-man install-pack
 
-install: install-indep 
-	mkdir -p $(BINDIR)
-	cp -f $(NAME).$(OCAMLBEST) $(BINDIR)/$(NAME)$(EXE)
-
 install-byte: install-indep
 	mkdir -p $(BINDIR)
 	cp -f $(NAME).byte $(BINDIR)/$(NAME)$(EXE)
@@ -213,10 +222,13 @@ install-man:
 	mkdir -p $(MANDIR)/man1
 	cp -f doc/*.1 $(MANDIR)/man1
 
-install-gui: install-indep
+install: install-indep
 	mkdir -p $(BINDIR)
+	cp -f $(NAME).$(OCAMLBEST) $(BINDIR)/$(NAME)$(EXE)
+ifeq ($(ENABLEGUI),yes)
 	cp -f altgr-ergo.opt $(BINDIR)/altgr-ergo$(EXE)
 	cp -f util/gtk-lang/alt-ergo.lang /usr/share/gtksourceview-2.0/language-specs/alt-ergo.lang
+endif
 
 install-pack: xpack pack
 	mkdir -p $(LIBDIR)
