modif du export de A-E
git-svn-id: svn://scm.gforge.inria.fr/svnroot/alt-ergo/trunk@609 b8d9039a-ea7d-4afb-bb93-26d10a78e78a

--- a/Makefile.in
+++ b/Makefile.in
@@ -308,6 +308,9 @@ FILES = exception.mli exception.ml \
 
 export: source binary
 	cp README COPYING CeCILL-C CHANGES doc/*.1 $(HTTP)
+	rm -rf export/$(EXPORTDIR)
+	rm -rf $(HTTP)/$(EXPORTDIR)
+	mv export $(HTTP)/$(EXPORTDIR)
 
 source: 
 	mkdir -p export/$(EXPORTDIR)
