git-svn-id: svn://scm.gforge.inria.fr/svnroot/alt-ergo/trunk@610 b8d9039a-ea7d-4afb-bb93-26d10a78e78a

--- a/Makefile.in
+++ b/Makefile.in
@@ -304,7 +304,8 @@ FILES = exception.mli exception.ml \
 	gui.ml \
 	main.ml \
 	Makefile.in configure configure.in \
-	.depend README INSTALL COPYING CeCILL-C CHANGES
+	.depend README INSTALL COPYING CeCILL-C CHANGES\
+	revision.sh
 
 export: source binary
 	cp README COPYING CeCILL-C CHANGES doc/*.1 $(HTTP)
