--- a/Makefile.in
+++ b/Makefile.in
@@ -195,7 +195,7 @@ VERSION=0.95
 
 version.ml: config.status
 # set version (and possibly revision) value in version.ml
-	$(shell ./revision.sh)
+	@echo "let version = \""$(VERSION)"\"" > version.ml
 	@echo "let date = \""`date`"\"" >> version.ml
 	@echo "let libdir = \""$(LIBDIR)"\"" >> version.ml
 
