bugfix 15592 : removed target test
git-svn-id: svn://scm.gforge.inria.fr/svnroot/alt-ergo/trunk@647 b8d9039a-ea7d-4afb-bb93-26d10a78e78a

--- a/Makefile.in
+++ b/Makefile.in
@@ -166,11 +166,9 @@ guibyte: $(PRECMO) $(OPTIONSCMO) $(GUICMO)
 	$(if $(QUIET),@echo 'Linking $@' &&) 
 	$(OCAMLC) $(BFLAGS) -o altgr-ergo.byte $(BIBBYTE) $(BIBGUIBYTE) $^
 
-test: $(OPT)
-	./$(OPT) test.mlw
-
 testbyte:$(BYTE)
-	tests/test.sh $(BYTE) -glouton
+	make -C util/
+	tests/test.sh " ./$(BYTE) -glouton -triggers-var -arrays "
 
 testopt:$(OPT)
 	make -C util/
