--- a/Makefile.in
+++ b/Makefile.in
@@ -70,6 +70,7 @@ BIBGUIOPT = threads.cmxa lablgtk.cmxa lablgtksourceview2.cmxa gtkThread.cmx
 #############
 
 NAME = alt-ergo
+GUINAME=altgr-ergo
 LIBNAME = altErgo
 BYTE=$(NAME).byte
 OPT=$(NAME).opt
@@ -148,23 +149,23 @@ $(NAME).opt: $(PRECMX) $(OPTIONSCMX) $(MAINCMX)
 	$(if $(QUIET),@echo 'Linking $@' &&) 
 	$(OCAMLOPT) $(OFLAGS) -o $@ $(BIBOPT) $^
 
-.PHONY: gui
+$(GUINAME).opt: $(PRECMX) $(OPTIONSCMX) $(GUICMX)
+	$(if $(QUIET),@echo 'Linking $@' &&) 
+	$(OCAMLOPT) $(OFLAGS) -o $(GUINAME).opt $(BIBOPT) $(BIBGUIOPT) $^
+
+$(GUINAME).byte: $(PRECMO) $(OPTIONSCMO) $(GUICMO)
+	$(if $(QUIET),@echo 'Linking $@' &&) 
+	$(OCAMLC) $(BFLAGS) -o $(GUINAME).byte $(BIBBYTE) $(BIBGUIBYTE) $^
 
 ifeq ($(ENABLEGUI),yes)
-gui: altgr-ergo.opt
-
-altgr-ergo.opt: $(PRECMX) $(OPTIONSCMX) $(GUICMX)
-	$(if $(QUIET),@echo 'Linking $@' &&) 
-	$(OCAMLOPT) $(OFLAGS) -o altgr-ergo.opt $(BIBOPT) $(BIBGUIOPT) $^
+gui: $(GUINAME).$(OCAMLBEST)
 else
-gui: $(PRECMX) $(OPTIONSCMX) $(GUICMX)
+gui:
 	@echo "gui compilation skipped (lablgtksourceview not detected)"
 endif
 
+.PHONY:: gui
 
-guibyte: $(PRECMO) $(OPTIONSCMO) $(GUICMO)
-	$(if $(QUIET),@echo 'Linking $@' &&) 
-	$(OCAMLC) $(BFLAGS) -o altgr-ergo.byte $(BIBBYTE) $(BIBGUIBYTE) $^
 
 testbyte:$(BYTE)
 	make -C util/
@@ -242,7 +243,7 @@ install: install-indep
 	mkdir -p $(BINDIR)
 	cp -f $(NAME).$(OCAMLBEST) $(BINDIR)/$(NAME)$(EXE)
 ifeq ($(ENABLEGUI),yes)
-	cp -f altgr-ergo.opt $(BINDIR)/altgr-ergo$(EXE)
+	cp -f $(GUINAME).$(OCAMLBEST) $(BINDIR)/$(GUINAME)$(EXE)
 	mkdir -p $(DATADIR)/gtksourceview-2.0/language-specs
 	cp -f util/gtk-lang/alt-ergo.lang $(DATADIR)/gtksourceview-2.0/language-specs/alt-ergo.lang
 endif
@@ -397,10 +398,10 @@ clean::
 	@rm -f *.cm[ioxt] *.cmti *.o *~ *.annot *.owz *mlocamlwizard_tmp_file*
 	@rm -f $(GENERATED) *.output
 	@rm -f $(NAME).byte $(NAME).opt
+	@rm -f $(GUINAME) $(GUINAME).opt $(GUINAME).byte
 	@rm -f unittest/*.cm[iox] unittest/*.o unittest/*.annot
 	@rm -f *.aux *.log $(NAME).tex $(NAME).dvi $(NAME).ps
 	@rm -f version.ml
-	@rm -f altgr-ergo.opt
 	@rm -f *.$(REVISIONSUFFIX)
 
 dist-clean distclean:: clean
