O101-004 Adjust steps and other minor changes
Redo some of the local changes we had on the repo

--- a/Makefile.users
+++ b/Makefile.users
@@ -56,6 +56,7 @@ CMO = src/util/version.cmo \
       src/util/numbers.cmo \
       src/util/timers.cmo \
       src/util/options.cmo \
+      src/util/steps.cmo \
       src/util/loc.cmo \
       src/util/hashcons.cmo \
       src/util/hstring.cmo \
